add base cookie and card icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <!-- nawigacja -->
   <main></main>
+  <i class="fas fa-shopping-cart"></i>
   <p class="text-muted">Copyright © IT SPA. All rights reserved.</p>
   <script src="src/it-spa.js"></script>
 </body>
