--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>IT SPA</title>
-  <base href="/" target="_self">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-</head>
-<body>
-  <!-- nawigacja -->
-  <main></main>
-  <i class="fas fa-shopping-cart"></i>
-  <p class="text-muted">Copyright © IT SPA. All rights reserved.</p>
-  <script src="src/it-spa.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>IT SPA</title>
+    <base href="/" target="_self" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
+    <!-- nawigacja -->
+    <main></main>
+    <i class="fas fa-shopping-cart"></i>
+    <p class="text-muted">Copyright © IT SPA. All rights reserved.</p>
+    <script src="src/it-spa.js"></script>
+  </body>
+</html>
